<resources>
    <string name="app_name">ListenApp!</string>
    <string name="login_options">OU ENTRE COM</string>
    <string name="facebook">FACEBOOK</string>
    <string name="google">GOOGLE</string>
    <string name="loginBtnTxt">LOGIN</string>
    <string name="criarContaBtnTxt">CRIAR CONTA</string>
    <string name="got_account">JÁ É CADASTRADO?</string>
    <string name="user">Usuário</string>
    <string name="app_logo">APP Logo</string>
    <string name="pw">Senha</string>
</resources>
