<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoApp"
        android:layout_width="270dp"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <View
        android:id="@+id/logo_detail"
        android:layout_width="200dp"
        android:layout_height="6dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/spacers"
        android:backgroundTint="@color/grey_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/logoApp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoApp"
        android:layout_marginHorizontal="50dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/user"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_user"
        app:layout_constraintBottom_toTopOf="@id/input_pwrepeat"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/pw"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_pwrepeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_pw"
        app:layout_constraintBottom_toTopOf="@id/confirm_Button"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/user"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/confirm_Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/round_button"
        android:text="@string/criarContaBtnTxt"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/toLoginOption"
        app:layout_constraintTop_toBottomOf="@id/input_pwrepeat"/>

    <TextView
        android:id="@+id/toLoginOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/got_account"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/toLogin_Button"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/toLogin_Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_button"
        android:text="@string/loginBtnTxt"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_options"
        android:layout_marginTop="5dp"/>

    <View
        android:id="@+id/spacer_left"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/spacers"
        android:backgroundTint="@color/grey_200"
        app:layout_constraintBottom_toTopOf="@+id/face_Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/login_options"/>

    <TextView
        android:id="@+id/login_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:text="@string/login_options"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/spacer_right"
        app:layout_constraintStart_toEndOf="@id/spacer_left"
        />

    <View
        android:id="@+id/spacer_right"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/spacers"
        android:backgroundTint="@color/grey_200"
        app:layout_constraintBottom_toTopOf="@+id/google_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/login_options"/>

    <Button
        android:id="@+id/face_Button"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/round_button"
        android:drawableStart="@drawable/ic_facebook_icon"
        android:elevation="2dp"
        android:paddingStart="10dp"
        android:paddingEnd="15dp"
        android:text="@string/facebook"
        android:textAlignment="viewEnd"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/facebook_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/google_Button"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/round_button"
        android:drawableStart="@drawable/ic_google"
        android:elevation="2dp"
        android:paddingStart="15dp"
        android:paddingEnd="20dp"
        android:text="@string/google"
        android:textAlignment="viewEnd"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/google_Red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>

